# aethelred-core

./: .gitignore  Cargo.toml  README.md  package.json
core/consensus/: Cargo.toml
core/consensus/src/: lib.rs
core/crypto/: Cargo.toml
core/crypto/.github/workflows/: ci.yml
core/crypto/scripts/: setup.sh
core/crypto/src/: lib.rs
