[workspace]
members = [
    "core/consensus",
    "core/crypto",
    "core/sgx",
    "core/deterministic",
    "validator/node",
    "sdk/rust"
]

[workspace.package]
version = "0.1.0"
authors = ["Aethelred Protocol Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aethelred-protocol/aethelred-core"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
ark-ff = "0.4"
ark-poly = "0.4"
