[package]
name = "aethelred-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha3.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
